# coding_agents

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
coding_agents/: server.sh
coding_agents/isl_osl/: README.md  main.py
coding_agents/isl_osl/pipeline/: agent.py  claude.py
coding_agents/isl_osl/pipeline/datasets/: __init__.py  sandbox.py  swebench.py
coding_agents/isl_osl/pipeline/proxy/: __init__.py  app.py  controller.py  parse.py
coding_agents/isl_osl/pipeline/utils/: git_repo.py  jsonl.py  metadata.py  processes.py
coding_agents/isl_osl/pipeline/vllm_metrics/: __init__.py  prometheus.py  scraper.py  snapshot.py
coding_agents/isl_osl/pipeline/vllm_server/: __init__.py  server.py  utils.py
