[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agents"
version = "0.1.0"
description = "Coding agent applications/experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets",       
    "httpx",          
    "uvicorn",        
    "starlette",      
    "loguru",         
    "tqdm",           
    "psutil",         
    "nvidia-ml-py", 
    "vllm",  
]

[tool.setuptools]
py-modules = []
